Some refactoring work
* move template to test code, add compiler exclusion of them in pom.xml
* add `<leader> mc` key map for `mvn clean`
* change deprecated code `new Integer(1)` to `Integer.valueOf(1)`
* comment out some unstable exception tests